# Snippetter

./: .gitignore  Hssb.cabal  LICENSE  README.md  TODO.txt  snippetter.cabal  stack.yaml
Hssb/: Data.hs
docs/: how-to-use.md
src/: Snippetter.hs
src/Hssb/: Data.hs  Helpers.hs  Layout.hs  MacroTest.hs  Utilities.hs
src/Hssb/Layout/: Types.hs
src/Snippetter/: Build.hs  DepManager.hs  FileGraph.hs  Helpers.hs  IO.hs  Layout.hs  LayoutBase.hs  LayoutTypes.hs  MacroTest.hs  Tutorial.hs  Utilities.hs
test/: TestAssist.hs  test-snippetter.hs
test/Tests/: Actions.hs  Build.hs  Content.hs  DepManager.hs  FileGraph.hs  Helpers.hs  Layout.hs  LayoutBaseBasics.hs  LayoutTypes.hs  MiscBuild.hs  SubBuilder.hs  Utilities.hs
