name:                snippetter
version:             0.1.0.0
homepage:            https://github.com/ElliotPak/snippetter
license:             BSD3
license-file:        LICENSE
author:              Elliot Pak
maintainer:          elliot@elliotpak.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
library
  exposed-modules:     Snippetter.Layout, Snippetter.MacroTest, Snippetter.Utilities, Snippetter.Helpers
  build-depends:       base >=4.9 && <4.10, yaml >=0.11 && <0.12, aeson >=1.2 && <1.3, directory >=1.3 && <1.4, text >=1.2 && <1.3, unordered-containers >=0.2 && <0.3, bytestring >=0.10 && <0.11, transformers >=0.5 && <0.6, mtl >=2.2 && <2.3, split >=0.2, filepath >= 1.4, vector >= 0.12, hashable >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
