name:                snippetter
version:             0.1.0.0
homepage:            https://github.com/ElliotPak/snippetter
license:             BSD3
license-file:        LICENSE
author:              Elliot Pak
maintainer:          elliot@elliotpak.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Snippetter.Helpers,
                       Snippetter.Utilities,
                       Snippetter.IO,
                       Snippetter.Layout,
                       Snippetter.Build
  build-depends:       base >=4.12 && <4.13,
                       yaml >=0.11 && <0.12,
                       aeson >=1.4 && <1.5,
                       directory >=1.3 && <1.4,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       transformers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       split >=0.2,
                       filepath >= 1.4,
                       vector >= 0.12,
                       hashable >= 1.2,
                       process >= 1.6,
                       ansi-terminal >= 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-snippetter
  type:           exitcode-stdio-1.0
  main-is:        test-snippetter.hs
  hs-source-dirs: test
  build-depends:  base >=4.12 && <4.13,
                  snippetter,
                  tasty >= 1.2 && < 1.3,
                  tasty-hunit >= 0.9 && < 0.11,
                  text >= 1.2 && <1.3,
                  transformers >=0.5 && <0.6,
                  mtl >=2.2 && <2.3,
                  unordered-containers >=0.2 && <0.3,
                  yaml >=0.11 && <0.12,
                  bytestring >=0.10 && <0.11
