name:                snippetter
synopsis:            Text file templating library
description:         Snippetter is a Haskell library that generates text files
                     through templating. It's intended use is static website
                     generation, but nothing Snippetter does is
                     webpage-specific, meaning you can use it to generate any
                     kind of text file. It also can execute other processes on
                     your system if you so choose.
                     .
                     To see how to use Snippetter, see "Snippetter.Tutorial".
version:             0.1.0.0
homepage:            https://github.com/ElliotPak/snippetter
bug-reports:         https://github.com/ElliotPak/snippetter/issues
stability:           alpha
license:             Apache
license-file:        LICENSE
author:              Elliot Pak <elliot@elliotpak.com>
maintainer:          Elliot Pak <elliot@elliotpak.com>
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:          git
  location:      git://github.com/elliotpak/Snippetter.git

library
  exposed-modules:     Snippetter.Helpers,
                       Snippetter.Utilities,
                       Snippetter.IO,
                       Snippetter.Layout,
                       Snippetter.Build,
                       Snippetter.FileGraph,
                       Snippetter.DepManager,
                       Snippetter.Tutorial,
                       Snippetter.InPlaceTest
  build-depends:       base >=4.12 && <4.13,
                       yaml >=0.11 && <0.12,
                       directory >=1.3 && <1.4,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       transformers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       filepath >= 1.4 && <1.5,
                       hashable >= 1.2 && <1.3,
                       process >= 1.6 && <1.7,
                       ansi-terminal >= 0.8 && <0.9,
                       time >= 1.8.0.2 && <1.9,
                       vector >= 0.12 && <0.13,
                       fsnotify >= 0.3 && <0.4,
                       twitch >= 0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-snippetter
  type:           exitcode-stdio-1.0
  main-is:        test-snippetter.hs
  hs-source-dirs: test
  build-depends:  base >=4.12 && <4.13,
                  snippetter,
                  tasty >= 1.2 && < 1.3,
                  tasty-hunit >= 0.9 && < 0.11,
                  text >= 1.2 && <1.3,
                  transformers >=0.5 && <0.6,
                  mtl >=2.2 && <2.3,
                  unordered-containers >=0.2 && <0.3,
                  yaml >=0.11 && <0.12,
                  bytestring >=0.10 && <0.11,
                  time >= 1.8.0.2 && <1.9
  other-modules:  TestAssist,
                  Tests.Helpers,
                  Tests.Build,
                  Tests.Layout,
                  Tests.Utilities,
                  Tests.SubBuilder,
                  Tests.FileGraph
